--- a/snique/en.lproj/MainStoryboard.storyboard
+++ b/snique/en.lproj/MainStoryboard.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="2">
     <dependencies>
+        <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
@@ -10,50 +11,104 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3" sceneMemberID="firstResponder"/>
                 <viewController id="2" customClass="SCSMainViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8">
-                        <rect key="frame" x="0.0" y="20" width="768" height="960"/>
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="13">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Title" id="14">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="2eF-aE-SaL">
+                                    <navigationItem id="14">
+                                        <nil key="title"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="e2b-aL-oQJ">
                                             <connections>
-                                                <action selector="refreshTapped:" destination="2" id="gtw-Qm-FT3"/>
+                                                <action selector="stopLoading" destination="Klc-IA-Aoa" id="iga-d4-eHu"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <webView contentMode="scaleToFill" id="SXI-69-ply">
-                                <rect key="frame" x="0.0" y="44" width="768" height="916"/>
+                            <view contentMode="scaleToFill" id="iUT-2Z-OyJ">
+                                <rect key="frame" x="146" y="6" width="576" height="33"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter URL" minimumFontSize="8" clearButtonMode="whileEditing" id="u4J-Eu-MN4">
+                                        <rect key="frame" x="0.0" y="1" width="576" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="2" id="Am1-dp-17e"/>
+                                        </connections>
+                                    </textField>
+                                    <label opaque="NO" clipsSubviews="YES" contentMode="left" text="" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" id="w5r-0R-q8f">
+                                        <rect key="frame" x="0.0" y="6" width="576" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <gestureRecognizers/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="50d-XS-xDt" appends="YES" id="aL9-Uu-I6b"/>
+                                        </connections>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <webView contentMode="scaleToFill" id="Klc-IA-Aoa">
+                                <rect key="frame" x="0.0" y="44" width="768" height="960"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <gestureRecognizers/>
-                                <dataDetectorType key="dataDetectorTypes"/>
                                 <connections>
-                                    <outlet property="delegate" destination="2" id="Ohx-84-HBr"/>
-                                    <outletCollection property="gestureRecognizers" destination="vNv-uB-Ams" appends="YES" id="CnQ-0Z-s6x"/>
+                                    <outlet property="delegate" destination="2" id="Ojt-zc-REi"/>
                                 </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Item" id="W2I-dS-nhL"/>
-                    </toolbarItems>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="addressField" destination="u4J-Eu-MN4" id="Uba-ZH-J4p"/>
+                        <outlet property="backButton" destination="9vw-Xf-R0L" id="fVo-Uf-qx5"/>
                         <outlet property="navBar" destination="13" id="hS9-bb-PKn"/>
-                        <outlet property="webView" destination="SXI-69-ply" id="bft-XE-zcj"/>
+                        <outlet property="nextButton" destination="F2a-dR-6xD" id="ljp-HU-41x"/>
+                        <outlet property="reloadButton" destination="2T2-TH-5iG" id="YJV-MO-cYH"/>
+                        <outlet property="stopButton" destination="e2b-aL-oQJ" id="cX2-jH-WnA"/>
+                        <outlet property="titleLabel" destination="w5r-0R-q8f" id="smn-Q0-RXz"/>
+                        <outlet property="webView" destination="Klc-IA-Aoa" id="2A3-Uz-2rJ"/>
+                        <outletCollection property="leftItems" destination="yGq-7B-MMs" id="IGv-GY-wWk"/>
+                        <outletCollection property="leftItems" destination="9vw-Xf-R0L" id="rYl-GJ-yOd"/>
+                        <outletCollection property="leftItems" destination="F2a-dR-6xD" id="osM-Ok-x0x"/>
                     </connections>
                 </viewController>
-                <tapGestureRecognizer numberOfTouchesRequired="3" id="vNv-uB-Ams">
+                <tapGestureRecognizer id="50d-XS-xDt">
                     <connections>
-                        <action selector="threeFingerTap:" destination="2" id="aXZ-m0-kIb"/>
+                        <action selector="titleTapped:" destination="2" id="G0O-yY-zgr"/>
                     </connections>
                 </tapGestureRecognizer>
+                <barButtonItem systemItem="refresh" id="2T2-TH-5iG">
+                    <connections>
+                        <action selector="reload" destination="Klc-IA-Aoa" id="LfT-iC-9IF"/>
+                    </connections>
+                </barButtonItem>
+                <barButtonItem systemItem="bookmarks" id="yGq-7B-MMs">
+                    <connections>
+                        <action selector="bookMarksTapped:" destination="2" id="aE2-tx-PPX"/>
+                    </connections>
+                </barButtonItem>
+                <barButtonItem systemItem="rewind" id="9vw-Xf-R0L">
+                    <connections>
+                        <action selector="goBack" destination="Klc-IA-Aoa" id="y8F-8q-Cb7"/>
+                    </connections>
+                </barButtonItem>
+                <barButtonItem systemItem="fastForward" id="F2a-dR-6xD">
+                    <connections>
+                        <action selector="goForward" destination="Klc-IA-Aoa" id="COk-z8-EkL"/>
+                    </connections>
+                </barButtonItem>
             </objects>
             <point key="canvasLocation" x="-286" y="15"/>
         </scene>
@@ -62,10 +117,17 @@
         <class className="SCSMainViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SCSMainViewController.h"/>
             <relationships>
-                <relationship kind="action" name="refreshTapped:"/>
-                <relationship kind="action" name="threeFingerTap:"/>
+                <relationship kind="action" name="bookMarksTapped:"/>
+                <relationship kind="action" name="titleTapped:"/>
+                <relationship kind="outlet" name="addressField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="backButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="navBar" candidateClass="UINavigationBar"/>
+                <relationship kind="outlet" name="nextButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="reloadButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="stopButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+                <relationship kind="outletCollection" name="leftItems" candidateClass="UIBarItem"/>
             </relationships>
         </class>
     </classes>
